Update h1 tag with name

--- a/index.html
+++ b/index.html
@@ -17,17 +17,20 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hey, my name's Keith! I was and raised all over New York and
+        I've also lived in Los Angeles for a bit!
+      </p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Queens, NY</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Games, Photography, Dance</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>It doesn't necessarily exist</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Queens, NY</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I'm here to learn a new skillset and expand 
+        my tools to succeed within life</p>
     </section>
 
     <footer id="footer">
